# Vending-machine-simulator

./: .gitignore  CMakeLists.txt  README.md  gui_main.c  logger.c  main.c  maintenance.c  style.css  vending_machine.c  vending_machine.h
src/core/: maintenance.c  vending_machine.c  vending_machine.h
src/ui/: gui_main.c  main.c
